--- a/playbooks/migratevaults.yml
+++ b/playbooks/migratevaults.yml
@@ -20,7 +20,7 @@
         vault_paths: "{{ defs.servicekeys | map(attribute='vault_path') | unique }}"
 
     - name: Process each vault file
-      ansible.builtin.include_tasks: tasks/process_vault_file.yml
+      ansible.builtin.include_tasks: ../tasks/process_vault_file.yml
       loop: "{{ vault_paths }}"
       loop_control:
         loop_var: vault_path
