--- a/tasks/process_vault_file.yml
+++ b/tasks/process_vault_file.yml
@@ -15,6 +15,9 @@
     dest: "/tmp/fetched_{{ vault_path | basename }}"
     flat: yes
 
+- name: Fix double colons in vault file
+  ansible.builtin.shell: "sed -i 's/:$//' {{ full_secret_path }}"
+
 - name: Include secret vars from fetched vault
   ansible.builtin.include_vars:
     file: "/tmp/fetched_{{ vault_path | basename }}"
