--- a/playbooks/migratevaults.yml
+++ b/playbooks/migratevaults.yml
@@ -1,4 +1,4 @@
-snf instal ansib---
+---
 - name: Map vault_key → akv_secret_key and build new secret file content
   hosts: 192.168.124.100
   gather_facts: false
@@ -18,7 +18,7 @@ snf instal ansib---
 
     - name: Get unique vault file paths by environment
       ansible.builtin.set_fact:
-        vault_paths: "{{ defs.servicekeys | map(attribute='vault_path') | unique | selectattr('environment', 'equalto', ambiente) }}"
+        vault_paths: "{{ defs.servicekeys | selectattr('environment', 'equalto', ambiente) | map(attribute='vault_path') | unique | list }}"
 
     - name: Process each vault file
       ansible.builtin.include_tasks: ../tasks/process_vault_file.yml
