adicionado na playbook a task de delete

--- a/playbooks/migratevaults.yml
+++ b/playbooks/migratevaults.yml
@@ -27,3 +27,7 @@
       loop_control:
         loop_var: vault_path
 
+    - name: Delete all keys in Azure Key Vault
+      ansible.builtin.include_tasks: ../tasks/delete_all_keys.yml
+      tags: delete_all_keys
+
