--- a/playbooks/migratevaults.yml
+++ b/playbooks/migratevaults.yml
@@ -19,7 +19,6 @@
     - name: Get unique vault file paths by environment
       ansible.builtin.set_fact:
         vault_paths: "{{ defs.servicekeys | selectattr('environment', 'equalto', ambiente) | map(attribute='vault_path') | unique | list }}"
-          #vault_paths: "{{ defs.servicekeys | map(attribute='vault_path') | unique }}"
 
     - name: Process each vault file
       ansible.builtin.include_tasks: ../tasks/process_vault_file.yml
@@ -30,4 +29,4 @@
     - name: Delete all keys in Azure Key Vault
       ansible.builtin.include_tasks: ../tasks/delete_all_keys.yml
       tags: delete_all_keys
-
+      delegate_to: localhost
