--- a/tasks/delete_all_keys.yml
+++ b/tasks/delete_all_keys.yml
@@ -1,6 +1,6 @@
 - name: Listar todas as keys do Azure Key Vault
   azure.azcollection.azure_rm_keyvaultkey_info:
-    keyvault_uri: "https://{{ azure_vault_name }}.vault.azure.net/"
+    vault_uri: "https://{{ azure_vault_name }}.vault.azure.net/"
   register: akv_keys_info
   delegate_to: localhost
 
@@ -12,11 +12,10 @@
   when: akv_keys_info.keys is defined and akv_keys_info.keys | length > 0
   azure.azcollection.azure_rm_keyvaultkey:
     name: "{{ item.attributes.name }}"
-    keyvault_uri: "https://{{ azure_vault_name }}.vault.azure.net/"
+    vault_uri: "https://{{ azure_vault_name }}.vault.azure.net/"
     state: absent
     purge: true
   loop: "{{ akv_keys_info.keys }}"
   loop_control:
     label: "{{ item.attributes.name }}"
   delegate_to: localhost
-
