--- a/tasks/delete_all_keys.yml
+++ b/tasks/delete_all_keys.yml
@@ -3,10 +3,12 @@
     vault_uri: "https://{{ azure_vault_name }}.vault.azure.net/"
   register: akv_keys_info
   delegate_to: localhost
+  tags: delete_all_keys
 
 - name: List akv_keys_info
   ansible.builtin.debug:
     var: akv_keys_info
+  tags: delete_all_keys
 
 - name: Remover todas as keys do Azure Key Vault
   when: akv_keys_info.keys is defined and akv_keys_info.keys | length > 0
@@ -19,3 +21,4 @@
   loop_control:
     label: "{{ item.attributes.name }}"
   delegate_to: localhost
+  tags: delete_all_keys
