--- a/tasks/delete_all_keys.yml
+++ b/tasks/delete_all_keys.yml
@@ -14,7 +14,7 @@
 - name: Remover todas as keys do Azure Key Vault
   azure.azcollection.azure_rm_keyvaultkey:
     key_name: "{{ item.attributes.name }}"
-    vault_uri: "https://{{ azure_vault_name }}.vault.azure.net"
+    keyvault_uri: "https://{{ azure_vault_name }}.vault.azure.net"
     state: absent
   loop: "{{ akv_keys_info.keys }}"
   loop_control:
