--- a/tasks/delete_all_keys.yml
+++ b/tasks/delete_all_keys.yml
@@ -1,24 +1,25 @@
 - name: Listar todas as keys do Azure Key Vault
-  azure.azcollection.azure_rm_keyvaultkey_info:
+  azure.azcollection.azure_rm_keyvaultsecret_info:
     vault_uri: "https://{{ azure_vault_name }}.vault.azure.net"
-  register: akv_keys_info
+  register: akv_secrets_info
   delegate_to: localhost
-  tags: delete_all_keys
+  tags: delete_all_secrets
 
 - name: List akv_keys_info
   ansible.builtin.debug:
-    var: akv_keys_info
+    var: akv_secrets_info
   delegate_to: localhost
-  tags: delete_all_keys
+  tags: delete_all_secrets
 
 - name: Remover todas as keys do Azure Key Vault
-  azure.azcollection.azure_rm_keyvaultkey:
-    key_name: "{{ item.attributes.name }}"
+  azure.azcollection.azure_rm_keyvaultsecret:
+    secret_name: "{{ item.attributes.name }}"
     keyvault_uri: "https://{{ azure_vault_name }}.vault.azure.net"
     state: absent
-  loop: "{{ akv_keys_info.keys }}"
+    purge_if_need: true
+  loop: "{{ akv_secrets_info.keys }}"
   loop_control:
     label: "{{ item.attributes.name }}"
   delegate_to: localhost
-  tags: delete_all_keys
-  when: akv_keys_info.keys is defined and akv_keys_info.keys | length > 0
+  tags: delete_all_secrets
+  when: akv_secrets_info.secrets is defined and akv_secrets_info.secrets | length > 0
