--- a/playbooks/migratevaults.yml
+++ b/playbooks/migratevaults.yml
@@ -1,6 +1,6 @@
 ---
 - name: Map vault_key → akv_secret_key and build new secret file content
-  hosts: aapexec
+  hosts: aapcontroller
   gather_facts: false
   become: false
 
