--- a/playbooks/migratevaults.yml
+++ b/playbooks/migratevaults.yml
@@ -7,7 +7,6 @@
   vars:
     base_secret_path: "/opt/NEXT/Devops/ansible/files/secret"
     servicekeys_file: "../vars/servicekeys.yml"
-    ambiente: "tu"
 
   tasks:
 
@@ -18,7 +17,7 @@
 
     - name: Get unique vault file paths by environment
       ansible.builtin.set_fact:
-        vault_paths: "{{ defs.servicekeys | selectattr('environment', 'equalto', ambiente) | map(attribute='vault_path') | unique | list }}"
+        vault_paths: "{{ defs.servicekeys | selectattr('environment', 'equalto', ambiente) | selectattr('secret_type', 'equalto', s_type) | map(attribute='vault_path') | unique | list }}"
 
     - name: Process each vault file
       ansible.builtin.include_tasks: ../tasks/process_vault_file.yml
