--- a/tasks/process_vault_file.yml
+++ b/tasks/process_vault_file.yml
@@ -7,10 +7,19 @@
     full_secret_path: "{{ base_secret_path }}/{{ vault_path }}"
 
 - name: Fetch vault file to controller
-  ansible.builtin.fetch:
-    src: "{{ full_secret_path }}"
-    dest: "/tmp/fetched_{{ vault_path | basename }}"
-    flat: yes
+  block:
+
+    - name: Getting the File
+      ansible.builtin.fetch:
+        src: "{{ full_secret_path }}"
+        dest: "/tmp/fetched_{{ vault_path | basename }}"
+        flat: yes
+
+  rescue:
+
+    - name: Vault file is missing
+      ansible.builtin.debug:
+        msg: "Vault file missing: {{ full_secret_path }}"
 
 - name: Include secret vars from fetched vault
   ansible.builtin.include_vars:
