--- a/playbooks/migratevaults.yml
+++ b/playbooks/migratevaults.yml
@@ -1,5 +1,5 @@
 ---
-- name: Map vault_key → akv_secret_key and build new secret file content
+- name: Map vault_key → akv_secret_key ( Migration to Azure KeyVault )
   hosts: 192.168.124.100
   gather_facts: false
   become: false
